--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
 
@@ -59,7 +59,7 @@ tasks.named('test') {
 def generated = 'src/main/generated'
 
 // Setting the file directory place of querydsl QClass
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.getGeneratedSourceOutputDirectory().set(file(generated))
 }
 
