#18- Solving parameter error issue
Caused by: java.lang.IllegalArgumentException: Name for argument of type [long] not specified, and parameter name information not available via reflection. Ensure that the compiler uses the '-parameters' flag

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ def generated = 'src/main/generated'
 // Setting the file directory place of querydsl QClass
 tasks.withType(JavaCompile).configureEach {
     options.getGeneratedSourceOutputDirectory().set(file(generated))
+    options.compilerArgs.add("-parameters")
 }
 
 // Add querydsl QClass to java source set
