--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,12 @@ logging:
     #org.hibernate: debug
 
 spring:
+  application.name: project-forum
+  cloud.vault:
+      scheme: http
+      authentication: TOKEN
+      token: ${VAULT_TOKEN}
+  config.import: vault://
   datasource:
     url: ${LOCAL_DB_URL}
     username: ${LOCAL_DB_USERNAME}
