--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -54,3 +54,9 @@ spring:
     url: ${JAWSDB_URL}
   jpa.hibernate.ddl-auto: create
   sql.init.mode: always
+
+---
+
+spring:
+  config.activate.on-profile: test
+  datasource.url: jdbc:h2:mem:testdb
