--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
-    implementation 'org.springdoc:springdoc-openapi-data-rest:2.6.0'
+    // implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+    // implementation 'org.springdoc:springdoc-openapi-data-rest:2.6.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
